# prokaryote-agent

./: .gitignore  CHANGELOG_V0.2.1.md  EVOLUTION_HISTORY.md  HYBRID_MODE.md  QUICKSTART.md  README.md  auto_evolve.py  autonomous.py  daemon.py  demo_skill_learning.py  demo_yuanzhi.py  evolution_goals.md  evolution_output.txt  evolution_principles.md  goal_evolution.py  main.py  pyproject.toml  quick_evolve.py  rebuild_modules.py  requirements.txt  run_test.bat  simple_agent.py  simple_evolve.py  start.py  start_evolution_windows.bat  test_capability_reuse.md  test_enzymes_quick.py  test_evolution_with_tests.py  test_knowledge_base.py  test_minimal.py  test_output.txt  test_reuse.py  test_skill_knowledge_integration.py  test_web_search.py  verify_merge.py
.github/: copilot-instructions.md
demo_skills/: debug_assistant_v1.py  legal_research_v1.py  skill_registry.json
docs/: AI_Adapter_Guide.md  PRD.md  V0.2_Design.md  代际进化系统设计.md  启动说明.md  概要设计.md  系统合并说明.md  自动优化功能.md  设计-知识进化系统.md  设计方案-能力作为Tools.md  迭代式进化-使用指南.md  迭代式进化设计.md  通用技能树设计.md  重复能力问题分析.md
examples/: basic_usage.py  complete_demo.py  long_running.py
generations/: lineage.json
prokaryote_agent/: __init__.py  ai_adapter.py  api.py  daemon_config.json  daemon_status.json  goal_manager.py  secrets.example.json
tests/: V0.1_ACCEPTANCE_REPORT.md  __init__.py  debug_start.py  test_acceptance.py  test_ai_adapter.py  test_basic.py  test_capability_generator.py  test_capability_manager.py  test_core_enzymes.py  test_daemon_cli.py  test_daemon_config.py  test_daemon_modules.py  test_evolution_index.py  (+5 more)
(+99 files in other folders)
